icecast2 (2.3.1-3) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * Small adjustments to debian/copyright:
    + Remove note on "FSF address adjusted" (it was stripped instead).
    + Correct path to src/httpp (not src/httpd).
    + Mention src/httpp licensing info only once.
    + Info for src/httpp covers src/timing too.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 17 Dec 2005 22:40:29 +0100

icecast2 (2.3.1-2) unstable; urgency=low

  * This package is now team-maintained!
    + Debian Icecast team <pkg-icecast-devel@lists.alioth.debian.org>
      maintains the package, with me as uploader.
    + If you want to help improve the package or want other Icecast-
      related packages maintained here then drop an email to the above
      mailinglist!
  * Move auto-update of debian/control out in reusable cdbs snippet.
  * Minor update to other cdbs snippets (non-unique cdbs namespace).
  * Auto-update debian/control, and manually strip build-essential from
    build-dependencies to not upset ftp-masters.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 17 Dec 2005 21:41:55 +0100

icecast2 (2.3.1-1) unstable; urgency=low

  * New upstream release. Closes: bug#343613 (thanks to Alexander
    Schories <alexander@schories.com>).
  * Debian subdir is again stripped from tarball.
  * Mention homepage (not website) in long description.
  * Depend on adduser (thanks to lintian).
  * Add local cdbs snippet copyright-check.mk.
  * Update debian/copyright to quote less of GPL licenses - to avoid
    lintian complaining about wrong FSF address.

 -- Jonas Smedegaard <dr@jones.dk>  Fri, 16 Dec 2005 23:08:50 +0100

icecast2 (2.3.0-2) unstable; urgency=low

  * Build-depend on libcurl3-gnutls-dev (not libcurl-dev) to avoid
    indirectly linking against GPL-unfriendly openssl. This also closes:
    bug#335891 (thanks to Chris Murton <chris@areti.net>).

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 27 Oct 2005 00:17:54 +0200

icecast2 (2.3.0-1) unstable; urgency=low
