@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian Icecast team <pkg-icecast-devel@lists.alioth.debian.org>
 Uploaders: Jonas Smedegaard <dr@jones.dk>
 Build-Depends: @cdbs@, libogg-dev (>> 1.0.0), libvorbis-dev (>> 1.0.0), libxslt-dev, libxml2-dev, libcurl3-gnutls-dev, libtheora-dev, libspeex-dev
-Standards-Version: 3.6.2
+Standards-Version: 3.7.1
 
 Package: icecast2
 Architecture: any
