@@ -6,6 +6,13 @@ icecast2 (2.3.1-3) UNRELEASED; urgency=low
     + Correct path to src/httpp (not src/httpd).
     + Mention src/httpp licensing info only once.
     + Info for src/httpp covers src/timing too.
+  * Update local cdbs snippet auto-update.mk:
+    + Drop unneeded buildcore.mk inclusion.
+    + Avoid problematic build-essential build-dependency.
+  * Update local cdbs snippet copyright-check.mk:
+    + Support changing the scope of files found.
+    + Treat all found files as non-binary.
+  * Bump to standards-version 3.7.1 (no changes needed).
 
  -- Jonas Smedegaard <dr@jones.dk>  Sat, 17 Dec 2005 22:40:29 +0100
 
